cmake_minimum_required(VERSION 3.28)
project(Lab3)

set(CMAKE_CXX_STANDARD 17)

add_executable(Lab3 main.cpp
        SigmaSamolot.cpp
        SigmaSamolot.h
        SigmaSamolot.h
        SigmaSilnik.cpp
        SigmaSilnik.h
        SigmaSilnik.h
        SigmaRadio.cpp
        SigmaRadio.h
        SigmaRadio.h)
